--- a/tests/laztest2/unit2.lfm
+++ b/tests/laztest2/unit2.lfm
@@ -1,18 +1,18 @@
 object pgfForm2: TpgfForm2
-  Left = 233
-  Top = 134
-  Width = 177
+  Left = 244
+  Top = 105
+  Width = 191
   Height = 50
   Align = alNone
   Anchors = [anLeft, anTop]
   Enabled = True
   TabOrder = 0
-  Visible = False
+  Visible = True
   Caption = 'Form2'
   object wgButton1: TwgButton
-    Left = 108
-    Top = 16
-    Width = 50
+    Left = 128
+    Top = 8
+    Width = 54
     Height = 26
     Align = alNone
     Anchors = [anLeft, anTop]
@@ -27,5 +27,21 @@ object pgfForm2: TpgfForm2
     AllowAllUp = False
     ModalResult = 0
     OnClick = wgButton1Click
+  end
+  object wgProgressbar1: TwgProgressbar
+    Left = 8
+    Top = 16
+    Width = 107
+    Height = 18
+    Align = alNone
+    Anchors = [anLeft, anTop]
+    Enabled = True
+    TabOrder = 0
+    Visible = True
+    DisplayPercent = True
+    Max = 100
+    Min = 0
+    Position = 50
+    Step = 2
   end
 end
